mesa (17.0.7-0ubuntu0.17.04.1) zesty; urgency=medium

  * New upstream bugfix release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 08 Jun 2017 10:54:05 +0300

mesa (17.0.5-0ubuntu1) artful; urgency=medium

  * New upstream bugfix release. (LP: #1686344)

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 04 May 2017 20:07:36 +0300

mesa (17.0.4-1ubuntu1) artful; urgency=medium

  * Merge from Debian.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 26 Apr 2017 11:01:18 +0300

mesa (17.0.4-1) experimental; urgency=medium

  * New upstrem release.

 -- Timo Aaltonen <tjaalton@debian.org>  Wed, 19 Apr 2017 16:14:20 +0300

mesa (17.0.3-1ubuntu1) zesty; urgency=medium

  * Merge from Debian.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 03 Apr 2017 19:03:10 +0300

mesa (17.0.3-1) experimental; urgency=medium

  * New upstream release.
  * Update d/upstream/signing-key.asc with key from Andres Gomez.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Mon, 03 Apr 2017 11:35:58 +0200

mesa (17.0.2-1ubuntu2) zesty; urgency=medium

  [ Cemil Azizoglu ]
  * egl-platform-rs.patch: Add support for Mir's new render surface based
    EGL driver
  * khr_platform_mir.patch: Add EGL_KHR_platform_mir
  * vulkan-mir.patch: Add Vulkan WSI driver for Mir

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 28 Mar 2017 19:22:29 +0300

mesa (17.0.2-1ubuntu1) zesty; urgency=medium

  * Merge from Debian experimental.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 21 Mar 2017 13:36:51 +0200

mesa (17.0.2-1) experimental; urgency=medium

  [ Timo Aaltonen ]
  * New upstream release.

  [ Andreas Boll ]
  * Require LLVM on sparc64:
    - Enables radeonsi, llvmpipe and radv drivers.
    - Enables OpenCL support.

 -- Andreas Boll <andreas.boll.dev@gmail.com>  Tue, 21 Mar 2017 11:35:09 +0100

mesa (17.0.1-1ubuntu1) zesty; urgency=medium

  * Merge from Debian.
    - enable llvmpipe on ppc64el (LP: #1489483)

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 10 Mar 2017 14:25:48 +0200
